cabal-version:      2.4
name:               min-caml
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable min-caml
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Type
                    , Id
                    , Syntax
                    , Lexer
                    , Parser
                    , Typing
                    , KNormal
                    , Alpha
                    , Closure

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.2.0
                    , array ^>=0.5.4.0
                    , mtl ^>=2.3
                    , containers ^>=0.6.5.1
                    , transformers ^>=0.6.0.4
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-name-shadowing
