cabal-version:      2.4
name:               min-caml
version:            0.1.0.0
synopsis:           MinCaml implementation in Haskell
description:        Please see the README on GitHub at <https://github.com/minoki/min-caml-hs#readme>
bug-reports:        https://github.com/minoki/min-caml-hs/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com
copyright:          2022 ARATA Mizuki
category:           Compiler
extra-source-files: CHANGELOG.md

executable min-caml
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    MyPrelude
                    , Type
                    , Id
                    , Syntax
                    , Lexer
                    , Parser
                    , Typing
                    , KNormal
                    , Alpha
                    , Closure
                    , AArch64.Asm
                    , AArch64.Virtual
                    , AArch64.RegAlloc
                    , AArch64.Emit

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.2.0
                    , array ^>=0.5.4.0
                    , mtl ^>=2.3
                    , containers ^>=0.6.5.1
                    , transformers ^>=0.6.0.4
                    , optparse-applicative ^>=0.17.0.0
                    , microlens ^>=0.4.13.0
                    , microlens-mtl ^>=0.2.0.2
                    , bytestring ^>=0.11.3.1
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -Wno-name-shadowing -fno-ignore-asserts
    default-extensions: NoImplicitPrelude
